--- a/server/public/index.html
+++ b/server/public/index.html
@@ -17,10 +17,11 @@
     </head>
     <body>
         <h1 id="title">To Do List</h1>
-        <div id="user-input">
-            <input type="text" placeholder="Title">
-            <input type="text" placeholder="Notes">
-            <input type="datetime-local" placeholder="Date">
+        <div id="user-input" class="task">
+            <input type="text" class="text" id="text-input" placeholder="Title">
+            <!-- <input type="text" class="text" placeholder="Notes"> -->
+            <input type="datetime-local" id="date-input">
+            <button id="enter-btn">ENTER</button>
         </div>
         <div class="to-do-list">
             <div class="task">
@@ -34,10 +35,8 @@
                     class="date"
                     placeholder="Date"
                     readonly>
-            
                 <button class="edit">Edit</button>
                 <button class="delete">Delete</button>
             </div> 
-        </div>
     </body>
 </html>
