Configured HTML and DB

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,7 +20,8 @@
         <div id="user-input" class="task">
             <input type="text" class="text" id="text-input" placeholder="Title">
             <!-- <input type="text" class="text" placeholder="Notes"> -->
-            <input type="datetime-local" id="date-input">
+            <input type="date" id="date-input">
+            <input type="time" id="time-input">
             <button id="enter-btn">ENTER</button>
         </div>
         <div class="to-do-list">
