favorite selector added

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,6 +22,10 @@
             <!-- <input type="text" class="text" placeholder="Notes"> -->
             <input type="date" id="date-input">
             <input type="time" id="time-input">
+            <select id="favorite-selector">
+                <option value="true">favorite</option>
+                <option value="false">not favorite</option>
+            </select>
             <button id="enter-btn">ENTER</button>
         </div>
         <div class="to-do-list">
