Delete route & btn completed

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -41,7 +41,7 @@
                     placeholder="Date"
                     readonly>
                 <button class="edit">Edit</button>
-                <button class="delete">Delete</button>
+                <button class="delete-btn">Delete</button>
             </div> 
     </body>
 </html>
