Front-End: edit feature completed

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,8 +23,8 @@
             <input type="date" id="date-input">
             <input type="time" id="time-input">
             <select id="favorite-selector">
-                <option value="true">favorite</option>
-                <option value="false">not favorite</option>
+                <option value="false">not important</option>
+                <option value="true">important</option>
             </select>
             <button id="enter-btn">ENTER</button>
         </div>
