--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,8 +12,8 @@
         <meta name="description" content="ToDoList">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/style.css">
-        <script src="./vendors/jquery-3.6.1.js" async defer></script>
-        <script src="./scripts/client.js" async defer></script>
+        <script src="./vendors/jquery-3.6.1.js"></script>
+        <script src="./scripts/client.js"></script>
     </head>
     <body>
         <h1 id="title">To Do List</h1>
