--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/style.css">
         <script src="./vendors/jquery-3.6.1.js"></script>
-        <script src="./scripts/client.js"></script>
+        <script src="./scripts/client.js" async defer></script>
     </head>
     <body>
         <h1 id="title">To Do List</h1>
