--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,7 +18,7 @@
     <body>
         <h1 id="title">To Do List</h1>
         <div id="user-input" class="task">
-            <input type="text" class="text" id="text-input" placeholder="Title">
+            <input type="text" class="text" id="text-input" placeholder="Add your to do here!">
             <!-- <input type="text" class="text" placeholder="Notes"> -->
             <input type="date" id="date-input">
             <input type="time" id="time-input">
