add sort by selector

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -29,6 +29,15 @@
             <button id="enter-btn">ENTER</button>
         </div>
         <hr>
+        <div id="sort-selector">
+            <label>Sort by:</label>
+            <select>
+                <option></option>
+                <option>Importance</option>
+                <option>Date</option>
+                <option>Completed</option>
+            </select>
+        </div>
         <div class="to-do-list">
             <div class="task">
                 <input 
